Fix date misalignment on front page when viewed on mobile.

--- a/css/custom.css
+++ b/css/custom.css
@@ -18,3 +18,7 @@
 .table-responsive {
     /*max-height: 80vh;*/
 }
+
+span.avoidwrap {
+    display: inline-block;
+}
